nicknamer/server/tests/snapshots/names_endpoints_tests__can_display_names_table_when_names_exist.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: names_table_with_existing_names
status: 200
content_type: text/html; charset=utf-8
headers:
  content-length: "3341"
  content-type: text/html; charset=utf-8
html_body: "<!DOCTYPE html>\n<html lang=\"en\">\n  <head>\n    <meta charset=\"UTF-8\" />\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\" />\n    <title>Names - Nicknamer</title>\n    <script\n      src=\"https://cdn.jsdelivr.net/npm/htmx.org@2.0.5/dist/htmx.min.js\"\n      crossorigin=\"anonymous\"\n    ></script>\n    <script\n      src=\"https://cdn.jsdelivr.net/npm/htmx-ext-response-targets@2.0.2\"\n      crossorigin=\"anonymous\"\n    ></script>\n    <link\n      href=\"https://cdn.jsdelivr.net/npm/daisyui@5\"\n      rel=\"stylesheet\"\n      type=\"text/css\"\n    />\n    <script src=\"https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4\"></script>\n  </head>\n  <body class=\"bg-base-200\" hx-ext=\"response-targets\">\n    <div class=\"container mx-auto p-4\">\n      <div class=\"navbar bg-base-100 rounded-box shadow-lg mb-6\">\n        <div class=\"navbar-start\">\n          <a href=\"/\" class=\"btn btn-ghost normal-case text-xl\">← Back</a>\n        </div>\n        <div class=\"navbar-center\">\n          <span class=\"text-xl font-bold\">Names Database</span>\n        </div>\n        <div class=\"navbar-end\">\n          <!-- Empty space to balance the navbar -->\n        </div>\n      </div>\n\n      <div class=\"card bg-base-100 shadow-xl\">\n        <div class=\"card-body\">\n          <div class=\"flex justify-between items-center mb-4\">\n            <h2 class=\"card-title text-2xl\">Stored Names</h2>\n            <button\n              class=\"btn btn-primary\"\n              hx-get=\"/names/form\"\n              hx-target=\"#add-name-form\"\n              hx-swap=\"innerHTML\"\n            >\n              <svg\n                xmlns=\"http://www.w3.org/2000/svg\"\n                class=\"h-5 w-5 mr-2\"\n                fill=\"none\"\n                viewBox=\"0 0 24 24\"\n                stroke=\"currentColor\"\n              >\n                <path\n                  stroke-linecap=\"round\"\n                  stroke-linejoin=\"round\"\n                  stroke-width=\"2\"\n                  d=\"M12 4v16m8-8H4\"\n                />\n              </svg>\n              Add Name\n            </button>\n          </div>\n\n          <div id=\"add-name-form\" class=\"mb-4\"></div>\n\n          <div id=\"names-table\">\n<div class=\"overflow-x-auto\">\n  <table class=\"table table-zebra w-full\">\n    <thead>\n      <tr>\n        <th>ID</th>\n        <th>Discord ID</th>\n        <th>Name</th>\n      </tr>\n    </thead>\n    <tbody>\n      \n      <tr>\n        <td>1</td>\n        <td>123456789</td>\n        <td class=\"font-semibold\">TestUser1</td>\n      </tr>\n      \n      <tr>\n        <td>2</td>\n        <td>987654321</td>\n        <td class=\"font-semibold\">TestUser2</td>\n      </tr>\n      \n    </tbody>\n  </table>\n</div>\n\n</div>\n          <div id=\"names-stat\"><div class=\"stats stats-horizontal shadow mt-6\">\n  <div class=\"stat\">\n    <div class=\"stat-title\">Total Names</div>\n    <div class=\"stat-value\">2</div>\n    <div class=\"stat-desc\">Names in database</div>\n  </div>\n</div></div>\n        </div>\n      </div>\n\n      <footer\n        class=\"footer footer-center p-4 bg-base-300 text-base-content mt-6\"\n      >\n        <aside>\n          <p>\n            Made with ❤️ by\n            <a\n              href=\"https://github.com/tacascer\"\n              target=\"_blank\"\n              rel=\"noopener noreferrer\"\n              >tacascer</a\n            >\n          </p>\n        </aside>\n      </footer>\n    </div>\n  </body>\n</html>"
